# tree-sitter-bat

./: .gitignore  Cargo.toml  README.md  binding.gyp  corpus.txt  grammar.js  package.json  test.bat  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
